<resources>
    <string name="app_name">TimeIsApp</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="app_title">TIME IS APP</string>
    <string name="subtitle">Try to save some time</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_form">REGISTER YOUR ACCOUNT</string>
    <string name="login_form">LOG IN</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="home">HOME</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="projects">Your Projects</string>
    <string name="add_project">Add Project</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>
    <string name="No_projects">No projects found…</string>
    <string name="project_list_speakable">Project List</string>
    <string name="select_button">select</string>
    <string name="confirm">Confirm</string>
    <string name="p_name">Project Name</string>
    <string name="p_description">Project Description</string>
    <string name="p_end_date">End Date Year / Month / Date</string>
    <string name="p_objective_text">Objective </string>
    <string name="p_objective_quantity">Objective quantity</string>
    <string name="p_step_number_tot">Steps total</string>
    <string name="p_step_completed">Step completed</string>
    <string name="p_step_value">Step value</string>
    <string name="p_time_left">Days Remaining</string>
    <string name="project_form">Project Form</string>
    <string name="place_holder">PROJECT NAME PLACE HOLDER</string>
    <string name="add_step">Add Step</string>
    <string name="remove_step">Remove Step</string>
    <string name="back_to_home">Back To Projects</string>
    <string name="project_details">Project Details</string>
    <string name="modify_project">Modify Project</string>
    <string name="progress_bar_details">Progress:</string>
    <string name="user_place_holder">user_placeholder</string>
    <string name="change_user">Change Username</string>
    <string name="username">Username</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="discard_changes">Discard Changes</string>
</resources>