<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6C676"
    android:backgroundTintMode="add"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/AppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/subtitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppTitle"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/ButtonBox"
        android:layout_width="246dp"
        android:layout_height="170dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Subtitle"
        app:layout_constraintVertical_bias="0.568">

        <Button
            android:id="@+id/Login_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/Register_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/register_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>